# pyct

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmark/baselines/realworld/: Is Possible Number String.json  JSON Loads.json  Parse Content Range Header.json  Parse Cookie.json  Parse Date String.json  Parse Dict Header.json  Parse List Header.json  Parse Options Header.json  Parse Phone Number.json  Parse Query String.json  Parse Range Header.json  URL Encode.json  URL Quote.json  (+9 more)
examples/complex_structures/: __init__.py  nested_config_validator.py  transaction_ledger_analysis.py
examples/deep_path_dependency/: __init__.py  multi_stage_form_validation.py  state_machine_validator.py
examples/hash_encoding/: __init__.py  base64_payload_classification.py  credit_card_validation.py
examples/library_black_box/: __init__.py  datetime_classification.py  json_config_validation.py  regex_data_extraction.py
examples/mixed_type_synergy/: __init__.py  access_control_checker.py  discount_engine.py  http_request_classification.py  shipping_rate_calculator.py
examples/pure_numeric/: __init__.py  bmi_risk_classifier.py  tax_bracket_calculator.py  triangle_classification.py
examples/solver_hard/: __init__.py  pattern_matching_dispatcher.py  string_similarity_classification.py
examples/string_constraints/: __init__.py  email_validation.py  log_level_routing.py  semver_parsing.py  url_routing.py
src/pyct/: __init__.py  __main__.py  cli.py  predicate.py
tests/: __init__.py
tests/acceptance/: __init__.py  test_branches.py  test_builtins.py  test_class_target_coverage.py  test_cli_smoke.py  test_collections.py  test_control_flow.py  test_llm_only_per_seed_timeout.py  test_loops.py  test_numerics.py  test_positional_only_target.py  test_python_api.py  test_strings.py
tests/unit/: __init__.py  conftest.py
tools/benchmark/: __main__.py  baseline.py  baseline_generator.py  cli.py  library_targets.py  models.py  output.py  realworld_targets.py  runners.py  scope_analysis.py  suite.py  targets.py
(+166 files in other folders)
